overlay/css/table.css
/* Column width defines */
.flex-column {
  text-align: var(--content-align);
}
.flex-column-i-icon {
  flex-grow: 0;
  flex-shrink: 0;
}
.flex-column-i-name, .flex-column-i-owner {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;

  text-align: left;

  flex-grow: 10;
  flex-basis: 0%;
}
.flex-column-i-class          { width: calc(1rem * var(--_i-class)); }
.flex-column-i-owner          { width: calc(1rem * var(--_i-owner)); }
.flex-column-i-name           { width: calc(1rem * var(--_i-name)); }
.flex-column-deal-total       { width: calc(1rem * var(--_deal-total)); }
.flex-column-deal-per-second  { width: calc(1rem * var(--_deal-per_second)); }
.flex-column-deal-pct         { width: calc(1rem * var(--_deal-pct)); }
.flex-column-deal-failure     { width: calc(1rem * var(--_deal-failure)); }
.flex-column-deal-accuracy    { width: calc(1rem * var(--_deal-accuracy)); }
.flex-column-deal-swing       { width: calc(1rem * var(--_deal-swing)); }
.flex-column-deal-miss        { width: calc(1rem * var(--_deal-miss)); }
.flex-column-deal-hitfail     { width: calc(1rem * var(--_deal-hitfail)); }
.flex-column-deal-critical    { width: calc(1rem * var(--_deal-critical)); }
.flex-column-deal-max         { width: calc(1rem * var(--_deal-max)); }
.flex-column-deal-maxhit      { width: calc(1rem * var(--_deal-maxhit)); }
.flex-column-deal-last10      { width: calc(1rem * var(--_deal-last10)); }
.flex-column-deal-last30      { width: calc(1rem * var(--_deal-last30)); }
.flex-column-deal-last60      { width: calc(1rem * var(--_deal-last60)); }
.flex-column-deal-last180      { width: calc(1rem * var(--_deal-last180)); }
.flex-column-tank-damage      { width: calc(1rem * var(--_tank-damage)); }
.flex-column-tank-parry       { width: calc(1rem * var(--_tank-parry)); }
.flex-column-tank-heal        { width: calc(1rem * var(--_tank-heal)); }
.flex-column-tank-block       { width: calc(1rem * var(--_tank-block)); }
.flex-column-heal-per-second  { width: calc(1rem * var(--_heal-per_second)); }
.flex-column-heal-pct         { width: calc(1rem * var(--_heal-pct)); }
.flex-column-heal-total       { width: calc(1rem * var(--_heal-total)); }
.flex-column-heal-swing       { width: calc(1rem * var(--_heal-swing)); }
.flex-column-heal-over        { width: calc(1rem * var(--_heal-over)); }
.flex-column-heal-cure        { width: calc(1rem * var(--_heal-cure)); }
.flex-column-heal-critical    { width: calc(1rem * var(--_heal-critical)); }
.flex-column-heal-max         { width: calc(1rem * var(--_heal-max)); }
.flex-column-heal-maxhit      { width: calc(1rem * var(--_heal-maxhit)); }
.flex-column-etc-powerdrain   { width: calc(1rem * var(--_etc-powerdrain)); }
.flex-column-etc-death        { width: calc(1rem * var(--_etc-death)); }
.flex-column-etc-powerheal    { width: calc(1rem * var(--_etc-powerheal)); }

.pet-merged .flex-column-i-owner {
  display: none !important;
}
.nameblur #table .flex-column-i-name > span:not(.name-you),
.nameblur #table .flex-column-i-owner > span:not(.name-you) {
  filter: blur(0.2rem) -webkit-blur(0.2rem);
  -webkit-filter: blur(0.2rem);
}
.zero {
  opacity: 0.75;
}
/* Position Helpers */
.class-gld .gauge, .class-pld .gauge, .class-mrd .gauge,
.class-war .gauge, .class-drk .gauge { /* tank; blue 500 */
  box-shadow: 0.25rem 0 0 var(--position-tank) inset;
}
.class-pgl .gauge, .class-mnk .gauge, .class-lnc .gauge,
.class-drg .gauge, .class-arc .gauge, .class-brd .gauge,
.class-rog .gauge, .class-nin .gauge, .class-acn .gauge,
.class-smn .gauge, .class-thm .gauge, .class-blm .gauge,
.class-mch .gauge { /* deal; red 500 */
  box-shadow: 0.25rem 0 0 var(--position-deal) inset;
}
.class-cnj .gauge, .class-whm .gauge, .class-sch .gauge,
.class-ast .gauge { /* heal; light green 500 */
  box-shadow: 0.25rem 0 0 var(--position-heal) inset;
}

/* Colors */
.gauge {
  background: var(--gauge-default);
  opacity: var(--gauge-opacity);
}
.class-gld .gauge, .class-pld .gauge { background: var(--pld); }
.class-mrd .gauge, .class-war .gauge { background: var(--war); }
.class-drk .gauge { background: var(--drk); }

.class-pgl .gauge, .class-mnk .gauge { background: var(--mnk); }
.class-lnc .gauge, .class-drg .gauge { background: var(--drg); }
.class-arc .gauge, .class-brd .gauge { background: var(--brd); }
.class-rog .gauge, .class-nin .gauge { background: var(--nin); }
.class-acn .gauge, .class-smn .gauge { background: var(--smn); }
.class-thm .gauge, .class-blm .gauge { background: var(--blm); }
.class-mch .gauge { background: var(--mch); }

.class-cnj .gauge, .class-whm .gauge { background: var(--whm); }
.class-sch .gauge { background: var(--sch); }
.class-ast .gauge { background: var(--ast); }

/* pets */
.class-emerald .gauge, .class-garuda .gauge, .class-topaz .gauge,
.class-titan .gauge, .class-ifrit .gauge { /* smn */
  background: var(--smn-pet);
}
.class-eos .gauge, .class-selene .gauge { /* sch */
  background: var(--sch-pet);
}
.class-rook .gauge, .class-bishop .gauge { /* mch */
  background: var(--mch-pet);
}

.class-limit-break .gauge {
  background: var(--limit-break);
}

main {
  font-size: var(--font-size-small);

  position: relative;
  height: 100%;
  max-height: calc(100% - var(--body-margin) - 2rem);

  margin: 0 calc(var(--body-margin) * 1);

  background: var(--content-bg);
  background-size: cover;
  background-position: center;

  box-shadow: 0 -0.25rem 0 rgba(0, 0, 0, 0.01), var(--shadow-card);
  text-shadow: var(--shadow-text);

  transition: height 200ms ease;

  z-index: 0;
}

main > ul {
  height: 100%;

  color: var(--content-fg);
  fill: var(--content-fg);

  line-height: 1.125rem;
  overflow-y: auto;
}
#patchnote {
  display: block !important;
  width: 100% !important;
  margin: 0 !important;
  background: none !important;
  height: auto;
  word-break: keep-all;
  text-align: center;
}
#patchnote h3 {
  background: rgba(255, 255, 255, 0.1);
}
#patchnote p {
  padding: 0 0.5rem;
}
#header, footer {
  display: flex;
  width: 100%;

  color: var(--content-fg);
  background: var(--header-bg);
  background-size: cover;
  background-position: center;
  text-shadow: var(--shadow-text);
}
#table {
  padding-bottom: 1.5rem;
}
#table > li {
  display: flex;
  flex-direction: row;
  z-index: 2;
  position: relative;
}
#table[data-width='2'], #table[data-width='3'] {
  flex-direction: row;
}
#table[data-width='2'] > li, #table[data-width='3'] > li {
  display: inline-flex;
  margin: 0 0.125rem;
  background: var(--cell-bg);
}
#table[data-width='2'] > li {
  width: calc(50% - 0.25rem);
}
#table[data-width='3'] > li {
  width: calc((100% / 3) - 0.25rem);
}

main li {
  height: var(--graph-height);
  line-height: var(--graph-height);
  overflow: hidden;

  transition: height 200ms ease;
}
.clsicon {
  max-width: 100%;
  max-height: 100%;
}
main .clsicon { /* workaround */
  width: var(--graph-height);
  height: var(--graph-height);
}

.gauge {
  position: absolute;
  bottom: 0;
  left: 0;
  height: var(--gauge-height);
  z-index: -1;
}

[class^='flex-column'] {
  display: inline-block;
}


footer {
  width: 100%;
  height: 1.5rem;
  line-height: 1.5rem;

  position: absolute;
  bottom: 0;
  z-index: 5;
}
.tabs {
  padding: 0 !important;
  flex-grow: 0 !important;
  flex-shrink: 0;
}
.tabs span {
  display: inline-block;
  padding: 0 0.5rem;
  border-right: 0.1rem solid rgba(255, 255, 255, 0.5);
}
.tabs span.active {
  color: var(--color-accent);
}

.footer-notify, .footer-stat {
  flex-grow: 1;
  flex-shrink: 0;
}
.footer-notify {
  padding: 0 0.25rem;
  text-align: left;
  flex-shrink: 1;
}
.footer-stat {
  text-align: right;
}
.footer-stat > * {
  display: inline-block;
  padding: 0 0.25rem;
  border-left: 0.1rem solid rgba(255, 255, 255, 0.5);
}

.collapsed {
  height: calc(var(--graph-height) * 2);
}
.collapsed #header, .collapsed #table > li:not(.me) {
  height: 0;
}

